refactor: update docs and complete mock todo repository
